[workspace]
members = ["lib"]
resolver = "3"

[workspace.package]
publish = false
license = "AGPL-3.0-only"
readme = "README.md"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
suspicious = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
multiple_crate_versions = "deny"
wildcard_dependencies = "deny"
